--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ header {
     max-width: 800px;
     margin: 20px auto;
     padding: 20px;
-    background: #111; /* Dark gray background */
+    background: -webkit-linear-gradient(#050223  , #420570 , #460232); /* Dark gray background */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
     animation: fadeIn 1s ease-in-out;
@@ -39,7 +39,7 @@ header {
 /* Section Heading Styles */
 h1,
 h2 {
-    background: -webkit-linear-gradient(135deg, #336699, #66ccff, #9900cc); /* Space-themed gradient for headings with a bit of purple */
+    background: -webkit-linear-gradient(135deg, #8c05f3, #33ff00, #ec3e8c); /* Light purple gradient for headings */
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-size: 24px; /* You can adjust the font size as needed */
@@ -49,7 +49,7 @@ h2 {
 
 /* Link Styles */
 a {
-    color: #66ccff; /* Light blue link color */
+    color: #f406e4; /* Light blue link color */
     text-decoration: none;
     background-image: linear-gradient(transparent 0%, transparent 100%);
     background-repeat: repeat-x;
@@ -73,7 +73,7 @@ p {
 .address {
     font-size: 14px;
     margin-top: 10px;
-    color: #999; /* Light gray address text */
+    color: #e6dede; /* Light gray address text */
 }
 
 /* Additional Information Styles */
@@ -87,7 +87,7 @@ img {
     height: 150px;
     object-fit: scale-down;
     border-radius: 50%; /* Circular profile picture */
-    background: -webkit-linear-gradient(135deg, #336699, #66ccff, #9900cc); /* Space-themed gradient background for the profile picture with a bit of purple */
+    background: -webkit-linear-gradient(135deg, #a066cc, #d6a0ff, #f4ccff); /* Light purple gradient background for the profile picture */
     box-shadow: 1px 1px 390px #05dbf7, -17px -17px 390px #66ccff; /* Subtle shadow */
     display: block;
     margin: 0 auto 20px;
