--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ header {
 /* Section Heading Styles */
 h1,
 h2 {
-    background: -webkit-linear-gradient(135deg, #8c05f3, #33ff00, #ec3e8c); /* Light purple gradient for headings */
+    background: -webkit-linear-gradient(135deg, #c887f9, #33ff00, #f672ad); /* Light purple gradient for headings */
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-size: 24px; /* You can adjust the font size as needed */
