--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ header {
 /* Section Heading Styles */
 h1,
 h2 {
-    background: linear-gradient(135deg, #c887f9, #a4f490, #fe7cb7); /* Light purple gradient for headings */
+    background: linear-gradient(135deg, #bb67fa, #d4e5d0, #fca1ca); /* Light purple gradient for headings */
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-size: 24px; /* You can adjust the font size as needed */
