--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background: -webkit-linear-gradient(135deg, #000000, #0a0a0a); /* Dark gradient background */
+    background: -webkit-linear-gradient(135deg, #4a0160, #0c5b77, #6f0c72, #130f87, #118a7c); /* Dark gradient background */
     color: #fff; /* White text */
 }
 
@@ -38,7 +38,7 @@ header {
 
 /* Section Heading Styles */
 h1,
-h2 {color: #a2fe04;
+h2 {color: #fec404;
     font-size: 24px; /* You can adjust the font size as needed */
     margin-bottom: 10px;
     background-clip: text;
